# Sam

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile  Procfile  README.md  USAGE.md  app.json  compose.yaml  pyproject.toml  requirements.txt  slack-manifest.yml  template.env
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
sam/: __init__.py  __main__.py  bot.py  config.py  redis_utils.py  slack.py  tools.py  typing.py  utils.py
sam/contrib/algolia/: __init__.py  config.py  tools.py
sam/contrib/brave/: __init__.py  config.py  tools.py
sam/contrib/github/: __init__.py  config.py  tools.py
sam/contrib/openai/: __init__.py
sam/contrib/postgres/: __init__.py  config.py  tools.py
tests/: test_api_client.py  test_bot.py  test_config.py  test_main.py  test_redis_utils.py  test_slack.py  test_tools.py  test_utils.py
tests/fixtures/: harry.md  pyproject.toml  security.md
